apps/grafana/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: grafana
    homelab.local/OwnedBy: ElPoshoX
